Prep to release 1.62.0 beta1 (#178)

--- a/users/history/version_1_62_0.html
+++ b/users/history/version_1_62_0.html
@@ -3,7 +3,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-  <title>Version 1.62.0 - work in progress</title>
+  <title>Version 1.62.0 beta</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <link rel="icon" href="/favicon.ico" type="image/ico" />
   <link rel="stylesheet" type="text/css" href="/style-v2/section-boost.css" />
@@ -34,18 +34,14 @@
             <div class="section-title">
               <h1>Version 1.62.0</h1>
             </div>
-                        <div class="section-alert"><p>Note: This release is
-                        still under development. Please don't use this page as
-                        a source of information, it's here for development
-                        purposes only. Everything is subject to
-                        change.</p></div>
+
             <div class="section-body">
               <h2><span class=
-              "news-title">Version 1.62.0 - work in progress</span></h2>
+              "news-title">Version 1.62.0 beta</span></h2>
 
               <p><span class=news-date">In Progress</span></p>
-              <p><a href="/doc/libs/master/">Documentation</a>
-              <p><span class="news-download"><a href="https://sourceforge.net/projects/boost/files/boost/snapshots/master/">Download snapshot.</a></span></p>
+              <p><a href="/doc/libs/1_62_0_b1/">Documentation</a>
+              <p><span class="news-download"><a href="https://sourceforge.net/projects/boost/files/boost/1.62.0.beta.1/">Download this beta release.</a></span></p>
               <div class="news-description">
                 <div class="description">
 
@@ -56,14 +52,14 @@
     <ul>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/fiber/">Fiber</a>:</span>
+          <span class="library"><a href="/doc/libs/1_62_0_b1/libs/fiber/">Fiber</a>:</span>
   Framework for userland-threads/fibers,
           from Oliver Kowalke.
         </div>
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/qvm/doc/index.html">QVM</a>:</span>
+          <span class="library"><a href="/doc/libs/1_62_0_b1/libs/qvm/doc/index.html">QVM</a>:</span>
   Boost QVM is a
           generic library for working with quaternions, vectors and matrices of static
           size with the emphasis on 2, 3 and 4-dimensional operations needed in graphics,
@@ -77,7 +73,7 @@
     <ul>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/chrono/">Chrono</a>:</span>
+          <span class="library"><a href="/doc/libs/1_62_0_b1/libs/chrono/">Chrono</a>:</span>
           <ul>
             <li>
               <div>
@@ -102,7 +98,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/circular_buffer/">Circular Buffer</a>:</span>
+          <span class="library"><a href="/doc/libs/1_62_0_b1/libs/circular_buffer/">Circular Buffer</a>:</span>
           <ul>
             <li>
               <div>
@@ -119,7 +115,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/container/">Container</a>:</span>
+          <span class="library"><a href="/doc/libs/1_62_0_b1/libs/container/">Container</a>:</span>
           <ul>
             <li>
               <div>
@@ -235,7 +231,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/context/">Context</a>:</span>
+          <span class="library"><a href="/doc/libs/1_62_0_b1/libs/context/">Context</a>:</span>
           <ul>
             <li>
               <div>
@@ -257,7 +253,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/coroutine2/">Coroutine2</a>:</span>
+          <span class="library"><a href="/doc/libs/1_62_0_b1/libs/coroutine2/">Coroutine2</a>:</span>
           <ul>
             <li>
               <div>
@@ -275,7 +271,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/dll/">DLL</a>:</span>
+          <span class="library"><a href="/doc/libs/1_62_0_b1/libs/dll/">DLL</a>:</span>
           <ul>
             <li>
               <div>
@@ -304,7 +300,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/functional/forward/">Functional/Forward</a>:</span>
+          <span class="library"><a href="/doc/libs/1_62_0_b1/libs/functional/forward/">Functional/Forward</a>:</span>
           <ul>
             <li>
               <div>
@@ -316,7 +312,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/interprocess/">Interprocess</a>:</span>
+          <span class="library"><a href="/doc/libs/1_62_0_b1/libs/interprocess/">Interprocess</a>:</span>
           <ul>
             <li>
               <div>
@@ -329,7 +325,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/intrusive/">Intrusive</a>:</span>
+          <span class="library"><a href="/doc/libs/1_62_0_b1/libs/intrusive/">Intrusive</a>:</span>
           <ul>
             <li>
               <div>
@@ -384,7 +380,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/lexical_cast/">Lexical Cast</a>:</span>
+          <span class="library"><a href="/doc/libs/1_62_0_b1/libs/lexical_cast/">Lexical Cast</a>:</span>
           <ul>
             <li>
               <div>
@@ -396,7 +392,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/log/">Log</a>:</span>
+          <span class="library"><a href="/doc/libs/1_62_0_b1/libs/log/">Log</a>:</span>
           <ul>
             <li>
               <div>
@@ -434,7 +430,7 @@
             </li>
             <li>
               <div>
-                See <a href="/doc/libs/master/libs/log/doc/html/log/changelog.html">changelog</a>
+                See <a href="/doc/libs/1_62_0_b1/libs/log/doc/html/log/changelog.html">changelog</a>
                 for more details.
               </div>
             </li>
@@ -443,7 +439,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/math/">Math</a>:</span>
+          <span class="library"><a href="/doc/libs/1_62_0_b1/libs/math/">Math</a>:</span>
           <ul>
             <li>
               <div>
@@ -483,7 +479,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/phoenix/">Phoenix</a>:</span>
+          <span class="library"><a href="/doc/libs/1_62_0_b1/libs/phoenix/">Phoenix</a>:</span>
           <ul>
             <li>
               <div>
@@ -523,7 +519,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/regex/">Regex</a>:</span>
+          <span class="library"><a href="/doc/libs/1_62_0_b1/libs/regex/">Regex</a>:</span>
           <ul>
             <li>
               <div>
@@ -552,11 +548,11 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/test/">Test</a>:</span>
+          <span class="library"><a href="/doc/libs/1_62_0_b1/libs/test/">Test</a>:</span>
           <ul>
             <li>
               <div>
-                Boost.test v3.3 see the '<a href="/doc/libs/master/libs/test/doc/html/boost_test/change_log.html">Change
+                Boost.test v3.3 see the '<a href="/doc/libs/1_62_0_b1/libs/test/doc/html/boost_test/change_log.html">Change
                 log</a>' section for details.
               </div>
             </li>
@@ -624,7 +620,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/thread/">Thread</a>:</span>
+          <span class="library"><a href="/doc/libs/1_62_0_b1/libs/thread/">Thread</a>:</span>
           <ul>
             <li>
               <div>
@@ -712,7 +708,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/type_index/">TypeIndex</a>:</span>
+          <span class="library"><a href="/doc/libs/1_62_0_b1/libs/type_index/">TypeIndex</a>:</span>
           <ul>
             <li>
               <div>
@@ -747,7 +743,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/unordered/">Unordered</a>:</span>
+          <span class="library"><a href="/doc/libs/1_62_0_b1/libs/unordered/">Unordered</a>:</span>
           <ul>
             <li>
               <div>
@@ -762,7 +758,7 @@
             </li>
             <li>
               <div>
-                See the <a href="/doc/libs/master/doc/html/unordered/changes.html">changelog</a>
+                See the <a href="/doc/libs/1_62_0_b1/doc/html/unordered/changes.html">changelog</a>
                 for more details.
               </div>
             </li>
@@ -771,7 +767,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/variant/">Variant</a>:</span>
+          <span class="library"><a href="/doc/libs/1_62_0_b1/libs/variant/">Variant</a>:</span>
           <ul>
             <li>
               <div>
@@ -1166,7 +1162,9 @@
   <div id="version_1_62_0.acknowledgements">
     <h3><span class="link">Acknowledgements</span></h3>
     <p>
-      <em>TODO</em>
+      <a href="/users/people/beman_dawes.html">Beman Dawes</a>, Eric Niebler,
+      <a href="/users/people/rene_rivera.html">Rene Rivera</a>, Daniel James,
+      Vladimir Prus and Marshall Clow managed this release.
     </p>
   </div>
 </div>
