--- a/users/history/version_1_62_0.html
+++ b/users/history/version_1_62_0.html
@@ -41,7 +41,9 @@
 
               <p><span class=news-date">In Progress</span></p>
               <p><a href="/doc/libs/1_62_0_b1/">Documentation</a>
-              <p><span class="news-download"><a href="https://sourceforge.net/projects/boost/files/boost/1.62.0.beta.1/">Download this beta release.</a></span></p>
+              <table class="download-table"><caption>Beta Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th><th scope="col">SHA256 Hash</th></tr>
+<tr><th scope="row" rowspan="2">unix</th><td><a href="https://sourceforge.net/projects/boost/files/boost/1.62.0.beta.1/boost_1_62_0_b1.tar.bz2">boost_1_62_0_b1.tar.bz2</a></td><td>4057993811e40b1fd4719675e44c2550b6c2379546192da2299c17fec9a3dddf</td></tr><tr><td><a href="https://sourceforge.net/projects/boost/files/boost/1.62.0.beta.1/boost_1_62_0_b1.tar.gz">boost_1_62_0_b1.tar.gz</a></td><td>fb0c10b625c5ec47cc837b54740540e400c59571b2eabf427c00f32bffc6ca70</td></tr>
+<tr><th scope="row" rowspan="2">windows</th><td><a href="https://sourceforge.net/projects/boost/files/boost/1.62.0.beta.1/boost_1_62_0_b1.7z">boost_1_62_0_b1.7z</a></td><td>f7cc83e6a3b03cd7aa8822992aa3e36422cc2214644d69277ef55a4db51f44bd</td></tr><tr><td><a href="https://sourceforge.net/projects/boost/files/boost/1.62.0.beta.1/boost_1_62_0_b1.zip">boost_1_62_0_b1.zip</a></td><td>b38ef21c43c5ff814a2144bc23871c134164e7f51c71672d0f49a44636fb50b5</td></tr></table>
               <div class="news-description">
                 <div class="description">
 
