Fix typo + rebuild

--- a/users/history/version_1_62_0.html
+++ b/users/history/version_1_62_0.html
@@ -255,6 +255,18 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/doc/libs/1_62_0_b1/libs/coroutine/">Coroutine</a>:</span>
+          <ul>
+            <li>
+              <div>
+                deprecated in favour of Coroutine2
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/doc/libs/1_62_0_b1/libs/coroutine2/">Coroutine2</a>:</span>
           <ul>
             <li>
