Fix 7z download link

--- a/users/history/version_1_62_0.html
+++ b/users/history/version_1_62_0.html
@@ -43,7 +43,7 @@
               <p><a href="/doc/libs/1_62_0_b2/">Documentation</a>
               <table class="download-table"><caption>Beta Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th></tr>
 <tr><th scope="row" rowspan="2">unix</th><td><a href="https://sourceforge.net/projects/boost/files/boost/1.62.0.beta.2/boost_1_62_0_b2.tar.bz2">boost_1_62_0_b2.tar.bz2</a></td></tr><tr><td><a href="https://sourceforge.net/projects/boost/files/boost/1.62.0.beta.2/boost_1_62_0_b2.tar.gz">boost_1_62_0_b2.tar.gz</a></td></tr>
-<tr><th scope="row" rowspan="2">windows</th><td><a href="https://sourceforge.net/projects/boost/files/boost/1.62.0.beta./boost_1_62_0_b2.7z">boost_1_62_0_b2.7z</a></td></tr><tr><td><a href="https://sourceforge.net/projects/boost/files/boost/1.62.0.beta.2/boost_1_62_0_b2.zip">boost_1_62_0_b2.zip</a></td></tr></table>
+<tr><th scope="row" rowspan="2">windows</th><td><a href="https://sourceforge.net/projects/boost/files/boost/1.62.0.beta.2/boost_1_62_0_b2.7z">boost_1_62_0_b2.7z</a></td></tr><tr><td><a href="https://sourceforge.net/projects/boost/files/boost/1.62.0.beta.2/boost_1_62_0_b2.zip">boost_1_62_0_b2.zip</a></td></tr></table>
               <div class="news-description">
                 <div class="description">
 
