--- a/users/history/version_1_62_0.html
+++ b/users/history/version_1_62_0.html
@@ -41,9 +41,9 @@
 
               <p><span class=news-date">In Progress</span></p>
               <p><a href="/doc/libs/1_62_0_b2/">Documentation</a>
-              <table class="download-table"><caption>Beta Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th></tr>
-<tr><th scope="row" rowspan="2">unix</th><td><a href="https://sourceforge.net/projects/boost/files/boost/1.62.0.beta.2/boost_1_62_0_b2.tar.bz2">boost_1_62_0_b2.tar.bz2</a></td></tr><tr><td><a href="https://sourceforge.net/projects/boost/files/boost/1.62.0.beta.2/boost_1_62_0_b2.tar.gz">boost_1_62_0_b2.tar.gz</a></td></tr>
-<tr><th scope="row" rowspan="2">windows</th><td><a href="https://sourceforge.net/projects/boost/files/boost/1.62.0.beta.2/boost_1_62_0_b2.7z">boost_1_62_0_b2.7z</a></td></tr><tr><td><a href="https://sourceforge.net/projects/boost/files/boost/1.62.0.beta.2/boost_1_62_0_b2.zip">boost_1_62_0_b2.zip</a></td></tr></table>
+              <table class="download-table"><caption>Beta Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th><th scope="col">SHA256 Hash</th></tr>
+<tr><th scope="row" rowspan="2">unix</th><td><a href="https://sourceforge.net/projects/boost/files/boost/1.62.0.beta.2/boost_1_62_0_b2.tar.bz2">boost_1_62_0_b2.tar.bz2</a></td><td>27bc9b328ff73d7dbf80cd9d4b5f79b0878221e5d8e4b6c47444b135edc1080a</td></tr><tr><td><a href="https://sourceforge.net/projects/boost/files/boost/1.62.0.beta.2/boost_1_62_0_b2.tar.gz">boost_1_62_0_b2.tar.gz</a></td><td>3939d5efa683449e87b374d7e92e3eeb6490063ddb2877919f0fad26e3a0f53e</td></tr>
+<tr><th scope="row" rowspan="2">windows</th><td><a href="https://sourceforge.net/projects/boost/files/boost/1.62.0.beta.2/boost_1_62_0_b2.7z">boost_1_62_0_b2.7z</a></td><td>95feae3620b3e604e93f14d97195fc04a4b67063692859af8df19657d41b82d5</td></tr><tr><td><a href="https://sourceforge.net/projects/boost/files/boost/1.62.0.beta.2/boost_1_62_0_b2.zip">boost_1_62_0_b2.zip</a></td><td>cff9ab5db0928244c4c836cf3da5140e6e93db7756e2791ba99a21104ad3aa72</td></tr></table>
               <div class="news-description">
                 <div class="description">
 
