Fix quickbook markup for some links

--- a/users/history/version_1_62_0.html
+++ b/users/history/version_1_62_0.html
@@ -295,13 +295,14 @@
             <li>
               <div>
                 Suppress a 'unused parameter' warning in detail::aggressive_ptr_cast
-                [https://github.com/apolukhin/Boost.DLL/pull/9 pull-request 9]
+                <a href="https://github.com/apolukhin/Boost.DLL/pull/9">pull-request
+                9</a>
               </div>
             </li>
             <li>
               <div>
-                Allowed to query non-existant sections [https://github.com/apolukhin/Boost.DLL/pull/32
-                pull-request 32]
+                Allowed to query non-existant sections <a href="https://github.com/apolukhin/Boost.DLL/pull/32">pull-request
+                32</a>
               </div>
             </li>
             <li>
