--- a/users/history/version_1_62_0.html
+++ b/users/history/version_1_62_0.html
@@ -759,8 +759,8 @@
             </li>
             <li>
               <div>
-                Fixed typos [https://github.com/boostorg/type_index/pull/7 pull-request
-                7]
+                Fixed typos <a href="https://github.com/boostorg/type_index/pull/7">pull-request
+                7</a>
               </div>
             </li>
             <li>
