Replace odd anchor with better markup.

--- a/community/official_library_maintainer_program.html
+++ b/community/official_library_maintainer_program.html
@@ -73,9 +73,8 @@ http://www.boost.org/development/website_updating.html
 
               <p>Thanks for helping out!</p>
 
-              <h2>Libraries and Participants</h2><a href="%3Ca" name=
-              "libraries_and_participants" id=
-              "libraries_and_participants"></a>
+              <h2 id="libraries_and_participants">Libraries and
+              Participants</h2>
 
               <p><a href=
               "blom_libraries/boost_function.html">Boost.Function</a> -
