Update various places where release is set.

--- a/common/menu-doc.html
+++ b/common/menu-doc.html
@@ -9,8 +9,11 @@
       <a href="/doc/libs">Libraries <span class="link">&gt;</span></a>
 
       <ul>
-        <li><a href="/doc/libs/1_61_0/" rel="nofollow">1.61.0 - Current
+        <li><a href="/doc/libs/1_62_0/" rel="nofollow">1.62.0 - Current
         Release <span class="link">&gt;</span></a></li>
+
+        <li><a href="/doc/libs/1_61_0/" rel="nofollow">1.61.0<span class=
+        "link">&gt;</span></a></li>
 
         <li><a href="/doc/libs/1_60_0/" rel="nofollow">1.60.0<span class=
         "link">&gt;</span></a></li>
