--- a/users/history/version_1_62_0.html
+++ b/users/history/version_1_62_0.html
@@ -39,7 +39,7 @@
               <h2><span class=
               "news-title">Version 1.62.0</span></h2>
 
-              <p><span class=news-date">In Progress</span></p>
+              <p><span class=news-date">September 28th, 2016 15:17 GMT</span></p>
               <p><a href="/doc/libs/1_62_0/">Documentation</a>
               <table class="download-table"><caption>Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th><th scope="col">SHA256 Hash</th></tr>
 <tr><th scope="row" rowspan="2">unix</th><td><a href="https://sourceforge.net/projects/boost/files/boost/1.62.0/boost_1_62_0_b2.tar.bz2">boost_1_62_0_b2.tar.bz2</a></td><td>36c96b0f6155c98404091d8ceb48319a28279ca0333fba1ad8611eb90afb2ca0</td></tr><tr><td><a href="https://sourceforge.net/projects/boost/files/boost/1.62.0/boost_1_62_0_b2.tar.gz">boost_1_62_0_b2.tar.gz</a></td><td>440a59f8bc4023dbe6285c9998b0f7fa288468b889746b1ef00e8b36c559dce1</td></tr>
