Add link to windows binaries.

--- a/users/history/version_1_62_0.html
+++ b/users/history/version_1_62_0.html
@@ -44,6 +44,11 @@
               <table class="download-table"><caption>Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th><th scope="col">SHA256 Hash</th></tr>
 <tr><th scope="row" rowspan="2">unix</th><td><a href="https://sourceforge.net/projects/boost/files/boost/1.62.0/boost_1_62_0.tar.bz2">boost_1_62_0.tar.bz2</a></td><td>36c96b0f6155c98404091d8ceb48319a28279ca0333fba1ad8611eb90afb2ca0</td></tr><tr><td><a href="https://sourceforge.net/projects/boost/files/boost/1.62.0/boost_1_62_0.tar.gz">boost_1_62_0.tar.gz</a></td><td>440a59f8bc4023dbe6285c9998b0f7fa288468b889746b1ef00e8b36c559dce1</td></tr>
 <tr><th scope="row" rowspan="2">windows</th><td><a href="https://sourceforge.net/projects/boost/files/boost/1.62.0/boost_1_62_0.7z">boost_1_62_0.7z</a></td><td>b91c2cda8bee73ea613130e19e72c9589e9ef0357c4c5cc5f7523de82cce11f7</td></tr><tr><td><a href="https://sourceforge.net/projects/boost/files/boost/1.62.0/boost_1_62_0.zip">boost_1_62_0.zip</a></td><td>084b2e0638bbe0975a9e43e21bc9ceae33ef11377aecab3268a57cf41e405d4e</td></tr></table>
+<h3>Third Party Downloads</h3>
+<ul>
+<li><a href="https://sourceforge.net/projects/boost/files/boost-binaries/1.62.0/">Windows Binaries</a></li>
+</ul>
+
               <div class="news-description">
                 <div class="description">
 
