Automatically update the documentation list

--- a/development/website_updating.html
+++ b/development/website_updating.html
@@ -287,7 +287,7 @@ tidy --tidy-mark no -i -wrap 78 -m -asxhtml --merge-divs no --merge-spans no --d
 
                 <li>Development: <tt>/common/menu-development.html</tt></li>
 
-                <li>Documentation: <tt>/common/menu-doc.html</tt></li>
+                <li>Documentation: <tt>/generated/menu-doc.html</tt></li>
               </ul>
 
               <h2><a id="Feeds" name="Feeds"></a>Generated Pages</h2>
