Added Synapse to the review schedule

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -546,6 +546,26 @@ http://www.boost.org/development/website_updating.html
                     <td>-</td>
                   </tr>
 
+                  <tr>
+                    <!-- Added October 2016 -->
+                    <td>Synapse</td>
+
+                    <td>Emil Dotchevski</td>
+
+                    <td>
+                      <ul>
+                        <li><a href="https://github.com/zajo/boost-synapse.git">
+                            Github</a>
+                        <li><a href="http://zajo.github.io/boost-synapse/index.html">
+                        Documentation</a>
+                      </ul>
+                    </td>                     
+
+                    <td>Edward Diener</td>
+
+                    <td>-</td>
+                  </tr>
+
 		  
 		  <!--
                   <tr>
