--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -566,6 +566,25 @@ http://www.boost.org/development/website_updating.html
                     <td>-</td>
                   </tr>
 
+                  <tr>
+                    <!-- Added October 2016 -->
+                    <td>Stacktrace</td>
+
+                    <td>Antony Polukhin</td>
+
+                    <td>
+                      <ul>
+                        <li><a href="https://github.com/apolukhin/stacktrace">
+                            Github</a>
+                        <li><a href="http://apolukhin.github.io/stacktrace/index.html">
+                        Documentation</a>
+                      </ul>
+                    </td>                     
+
+                    <td>Needed</td>
+
+                    <td>-</td>
+                  </tr>
 		  
 		  <!--
                   <tr>
