--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -586,6 +586,27 @@ http://www.boost.org/development/website_updating.html
                     <td>-</td>
                   </tr>
 		  
+                  <tr>
+                    <!-- Added October 2016 -->
+                    <td>PFR</td>
+
+                    <td>Antony Polukhin</td>
+
+                    <td>
+                      <ul>
+                        <li><a href="http://blincubator.com/bi_library/pfr-pod-flat-reflection/?gform_post_id=1606">
+                        Incubator</a>
+                        <li><a href="https://github.com/apolukhin/magic_get">
+                            Github</a>
+                        <li><a href="http://apolukhin.github.io/magic_get/">
+                        Documentation</a>
+                      </ul>
+                    </td>                     
+
+                    <td>Needed</td>
+
+                    <td>-</td>
+                  </tr>
 		  <!--
                   <tr>
                     <!== Added February 2014 - >
