Niall Douglas will manage Stacktrace review

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -585,7 +585,7 @@ http://www.boost.org/development/website_updating.html
                       </ul>
                     </td>                     
 
-                    <td>Needed</td>
+                    <td>Niall Douglas</td>
 
                     <td>-</td>
                   </tr>
