Synapse dates set.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -567,7 +567,7 @@ http://www.boost.org/development/website_updating.html
 
                     <td>Edward Diener</td>
 
-                    <td>-</td>
+                    <td>December 2, 2016 - December 11, 2016</td>
                   </tr>
 
                   <tr>
