--- a/users/history/version_1_58_0.html
+++ b/users/history/version_1_58_0.html
@@ -917,7 +917,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/hash/">Hash</a>:</span>
+          <span class="library"><a href="/libs/functional/hash/">Hash</a>:</span>
           <ul>
             <li>
               <div>
