--- a/users/history/version_1_55_0.html
+++ b/users/history/version_1_55_0.html
@@ -842,7 +842,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/hash/">Hash</a>:</span>
+          <span class="library"><a href="/libs/functional/hash/">Hash</a>:</span>
           <ul>
             <li>
               <div>
@@ -1426,7 +1426,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/Thread/">Thread</a>:</span>
+          <span class="library"><a href="/libs/thread/">Thread</a>:</span>
           <ul>
             <li>
               <div>
