Python release notes

--- a/users/history/version_1_63_0.html
+++ b/users/history/version_1_63_0.html
@@ -144,6 +144,28 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/libs/python/">Python</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Added (basic) support for C++11 (std::shared_ptr, std::unique_ptr)
+              </div>
+            </li>
+            <li>
+              <div>
+                Incorporated an extension API to wrap <a href="http://www.numpy.org/">NumPy</a>
+              </div>
+            </li>
+            <li>
+              <div>
+                Removed obsolete bits and pieces
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <em>TODO</em>
         </div>
       </li>
