Link by default to master in dev release notes

--- a/users/history/version_1_63_0.html
+++ b/users/history/version_1_63_0.html
@@ -55,7 +55,7 @@
     <ul>
       <li>
         <div>
-          <span class="library"><a href="/libs/atomic/">Atomic</a>:</span>
+          <span class="library"><a href="/doc/libs/master/libs/atomic/">Atomic</a>:</span>
           <ul>
             <li>
               <div>
@@ -75,7 +75,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/log/">Log</a>:</span>
+          <span class="library"><a href="/doc/libs/master/libs/log/">Log</a>:</span>
           <ul>
             <li>
               <div>
@@ -135,7 +135,7 @@
             </li>
             <li>
               <div>
-                See <a href="/libs/log/doc/html/log/changelog.html">changelog</a>
+                See <a href="/doc/libs/master/libs/log/doc/html/log/changelog.html">changelog</a>
                 for more details.
               </div>
             </li>
@@ -144,7 +144,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/python/">Python</a>:</span>
+          <span class="library"><a href="/doc/libs/master/libs/python/">Python</a>:</span>
           <ul>
             <li>
               <div>
