--- a/users/history/version_1_63_0.html
+++ b/users/history/version_1_63_0.html
@@ -233,7 +233,149 @@
     <ul>
       <li>
         <div>
-          <em>TODO</em>
+          Linux:
+          <ul>
+            <li>
+              <div>
+                Clang: 3.0, 3.8.1
+              </div>
+            </li>
+            <li>
+              <div>
+                Clang, C++11: 3.0, 3.1, 3.2, 3.3, 3.4, 3.8.1
+              </div>
+            </li>
+            <li>
+              <div>
+                Clang, C++14: 3.5, 3.6, 3.7, 3.8.1
+              </div>
+            </li>
+            <li>
+              <div>
+                Clang, C++1z: 3.8.1
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC: 4.4.7, 4.5.3, 4.6.3, 4.7.2, 5.2.0, 6.2.0
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++11: 4.4.7, 4.7.2, 4.7.3, 4.8.5, 4.9.3, 5.2.0, 6.1.1, 6.2.0
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++14: 5.2.0, 5.3.0, 6.1.1, 6.2.0
+              </div>
+            </li>
+            <li>
+              <div>
+                Intel: 16.0, 17.0
+              </div>
+            </li>
+            <li>
+              <div>
+                Intel, C++11: 16.0, 17.0
+              </div>
+            </li>
+            <li>
+              <div>
+                Intel, C++14: 16.0, 17.0
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          OS X:
+          <ul>
+            <li>
+              <div>
+                Apple Clang: 7.0.2
+              </div>
+            </li>
+            <li>
+              <div>
+                Apple Clang, C++11: 7.0.2
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          Windows:
+          <ul>
+            <li>
+              <div>
+                GCC, C++03, mingw: 3.4.5, 4.1.2, 4.2.4, 4.3.3, 4.4.0
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++11, mingw: 4.6.4, 4.7.3, 4.8.1
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++14, mingw: 4.9.3, 5.1.0, 5.2.0, 5.3.0, 6.1.0
+              </div>
+            </li>
+            <li>
+              <div>
+                Visual C++: 7.1, 8.0, 9.0, 10.0, 11.0, 12.0, 14.0
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          Android:
+          <ul>
+            <li>
+              <div>
+                Clang: 3.6, 3.7, 3.8
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC: 4.9, 5.4, 6.2
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          QNX:
+          <ul>
+            <li>
+              <div>
+                QCC: 4.4.2
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          SunOS:
+          <ul>
+            <li>
+              <div>
+                Oracle Solaris Studio: 12.5
+              </div>
+            </li>
+            <li>
+              <div>
+                Oracle Solaris Studio, C++11: 12.5
+              </div>
+            </li>
+          </ul>
         </div>
       </li>
     </ul>
@@ -243,7 +385,159 @@
     <ul>
       <li>
         <div>
-          <em>TODO</em>
+          Linux:
+          <ul>
+            <li>
+              <div>
+                Clang: 3.0, 3.8.1
+              </div>
+            </li>
+            <li>
+              <div>
+                Clang, C++11: 3.0, 3.1, 3.2, 3.3, 3.4, 3.8.1
+              </div>
+            </li>
+            <li>
+              <div>
+                Clang, C++14: 3.5, 3.6, 3.7, 3.8.1
+              </div>
+            </li>
+            <li>
+              <div>
+                Clang, C++1z: 3.8.1
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC: 4.4.7, 4.5.3, 4.6.3, 4.7.2, 5.2.0, 6.1.1, 6.2.0
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++11: 4.4.7, 4.7.2, 4.7.3, 4.8.5, 4.9.3, 5.2.0, 6.1.1, 6.2.0
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++14: 5.2.0, 5.3.0, 6.1.1, 6.2.0, 7.0.0 (experimental)
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++1z: 6.1.1
+              </div>
+            </li>
+            <li>
+              <div>
+                Intel: 16.0, 17.0
+              </div>
+            </li>
+            <li>
+              <div>
+                Intel, C++11: 16.0, 17.0
+              </div>
+            </li>
+            <li>
+              <div>
+                Intel, C++14: 16.0, 17.0
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          OS X:
+          <ul>
+            <li>
+              <div>
+                Apple Clang: 7.0.2
+              </div>
+            </li>
+            <li>
+              <div>
+                Apple Clang, C++11: 7.0.2
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          Windows:
+          <ul>
+            <li>
+              <div>
+                GCC, C++03, mingw: 3.4.5, 4.1.2, 4.2.4, 4.3.3, 4.4.0
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++11, mingw: 4.6.4, 4.7.3, 4.8.1
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++14, mingw: 4.9.3, 5.1.0, 5.2.0, 5.3.0, 6.1.0
+              </div>
+            </li>
+            <li>
+              <div>
+                Visual C++: 7.1, 8.0, 9.0, 10.0, 11.0, 12.0, 14.0
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          Android:
+          <ul>
+            <li>
+              <div>
+                Clang: 3.6, 3.7, 3.8
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC: 4.9, 5.4, 6.2
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC,C++14: 6.1.0
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          QNX:
+          <ul>
+            <li>
+              <div>
+                QCC: 4.4.2
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          SunOS:
+          <ul>
+            <li>
+              <div>
+                Oracle Solaris Studio: 12.5
+              </div>
+            </li>
+            <li>
+              <div>
+                Oracle Solaris Studio, C++11: 12.5
+              </div>
+            </li>
+          </ul>
         </div>
       </li>
     </ul>
@@ -251,7 +545,9 @@
   <div id="version_1_63_0.acknowledgements">
     <h3><span class="link">Acknowledgements</span></h3>
     <p>
-      <em>TODO</em>
+      <a href="/users/people/beman_dawes.html">Beman Dawes</a>, Eric Niebler,
+      <a href="/users/people/rene_rivera.html">Rene Rivera</a>, Daniel James,
+      Vladimir Prus and Marshall Clow managed this release.
     </p>
   </div>
 </div>
