Add release notes for unordered and hash.

--- a/users/history/version_1_63_0.html
+++ b/users/history/version_1_63_0.html
@@ -75,6 +75,18 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/doc/libs/master/libs/functional/hash">Hash</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Fixed some warnings.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/doc/libs/master/libs/log/">Log</a>:</span>
           <ul>
             <li>
@@ -213,6 +225,45 @@
                 Internals of the CTTI were made more platform independant, due to
                 change of the <code><span class="identifier">std</span><span class="special">::</span><span class="identifier">size_t</span></code>
                 type to <code><span class="keyword">unsigned</span> <span class="keyword">int</span></code>.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/master/libs/unordered/">Unordered</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Fix an exception safety issue in assignment.
+              </div>
+            </li>
+            <li>
+              <div>
+                Use <code><span class="identifier">std</span><span class="special">::</span><span class="identifier">allocator_traits</span></code> where available,
+                and support modern style rebind (<a href="https://svn.boost.org/trac/boost/ticket/12459">#12459</a>).
+              </div>
+            </li>
+            <li>
+              <div>
+                Add some allocator aware constructors.
+              </div>
+            </li>
+            <li>
+              <div>
+                Use the hint iterator in <code><span class="identifier">emplace_hint</span></code>.
+              </div>
+            </li>
+            <li>
+              <div>
+                Fixed some warnings.
+              </div>
+            </li>
+            <li>
+              <div>
+                See the <a href="/doc/libs/master/doc/html/unordered/changes.html">changelog</a>
+                for more details.
               </div>
             </li>
           </ul>
