Add sponsorship webpage for IMC (#195)
* Add sponsorship webpage for IMC

* Update copyright notice

--- a/community/gsoc.html
+++ b/community/gsoc.html
@@ -78,6 +78,10 @@ Students may find examining past GSoC source code and commit histories of use.
 </li><li>2006 <a class="ext-link" href="http://www.crystalclearsoftware.com/cgi-bin/boost_wiki/wiki.pl?Google_Summer_Of_Code_2006"><span class="icon"> </span>Project Ideas</a>.
 <a href="http://www.boost.org/community/gsoc_2006_boost_overview.html">An overview of Boost participation in Google Summer of Code™ 2006</a>.
 </li></ul>
+<h3 id="Sponsorhips">Sponsorships</h3>
+<ul>
+<li><a href="imc_summer_of_code_2016.html">IMC Financial Markets, 2016</a></li>
+</ul>
 
             </div>
           </div>
