--- a/community/imc_summer_of_code_2016.html
+++ b/community/imc_summer_of_code_2016.html
@@ -29,7 +29,7 @@ http://www.boost.org/development/website_updating.html
             </div>
 
             <div class="section-body">
-              <a href="http://www.imc.com/"><img src="../gfx/imc.jpg" width=
+              <a href="http://www.imc.com/"><img src="../gfx/imc.png" width=
               "600" height="134" alt="IMC" /></a>
 
               <p>Boost has participated in the Google Summer of Code program
