Process is accepted.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -636,13 +636,16 @@ http://www.boost.org/development/website_updating.html
 
                     <td>October 27, 2016 - November 5, 2016</td>
 
-		    <td>
+		    <td><del>
+			<a href=
+			   "http://lists.boost.org/boost-announce/2016/10/0476.php">
+			  Pending
+		      </a></del><br/>
 		      <a href=
-			 "http://lists.boost.org/boost-announce/2016/10/0476.php">
-			Ongoing
+			 "http://lists.boost.org/boost-announce/2016/11/0477.php">
+			Accepted
 		      </a>
-                    </td>
-
+		    </td>
 
                   </tr>
 
