--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -558,7 +558,7 @@ http://www.boost.org/development/website_updating.html
 
                     <td>Niall Douglas</td>
 
-                    <td>-</td>
+                    <td>December 14, 2016 - December 23, 2016</td>
                   </tr>
 		  
                   <tr>
