--- a/users/history/in_progress.html
+++ b/users/history/in_progress.html
@@ -34,7 +34,9 @@
               "news-title">Version 1.63.0</span></h2>
 
               <p><span class=news-date">In Progress</span></p>
-
+              <table class="download-table"><caption>Development Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th><th scope="col">SHA256 Hash</th></tr>
+<tr><th scope="row" rowspan="2">unix</th><td><a href="https://sourceforge.net/projects/boost/files/boost/1.63.0/boost_1_63_0_rc1.tar.bz2">boost_1_63_0_rc1.tar.bz2</a></td><td>d8ebf8d90b2f823f04119445ac339d704395d655907333ec0fab863040119d24</td></tr><tr><td><a href="https://sourceforge.net/projects/boost/files/boost/1.63.0/boost_1_63_0_rc1.tar.gz">boost_1_63_0_rc1.tar.gz</a></td><td>dabe29b8a60369ae7c15c20681a32717f3c37d97e5dc6d39c5b2fd0494b8e995</td></tr>
+<tr><th scope="row" rowspan="2">windows</th><td><a href="https://sourceforge.net/projects/boost/files/boost/1.63.0/boost_1_63_0_rc1.7z">boost_1_63_0_rc1.7z</a></td><td>010699561c6011e6d97dc453d55bc5e54cdc192622434eff7b8ac559efac846c</td></tr><tr><td><a href="https://sourceforge.net/projects/boost/files/boost/1.63.0/boost_1_63_0_rc1.zip">boost_1_63_0_rc1.zip</a></td><td>1683942022fd63c205c48fb2155af6094c67ef67aa13ffb3e1db78fecf817efe</td></tr></table>
               <div class="news-description">
                 <div class="description">
 
