--- a/users/history/version_1_46_0.html
+++ b/users/history/version_1_46_0.html
@@ -40,7 +40,7 @@
               "news-title">Version 1.46.0</span></h2>
 
               <p><span class=news-date">February 21st, 2011 20:36 GMT</span></p>
-
+              <p><a href="/doc/libs/1_46_0/">Documentation</a>
               <table class="download-table"><caption>Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th></tr>
 <tr><th scope="row" rowspan="2">unix</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.46.0/boost_1_46_0.tar.bz2">boost_1_46_0.tar.bz2</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.46.0/boost_1_46_0.tar.gz">boost_1_46_0.tar.gz</a></td></tr>
 <tr><th scope="row" rowspan="2">windows</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.46.0/boost_1_46_0.7z">boost_1_46_0.7z</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.46.0/boost_1_46_0.zip">boost_1_46_0.zip</a></td></tr></table>
